--- a/launch.json
+++ b/launch.json
@@ -13,4 +13,4 @@
         }
     ]
 }
-// Debug this file in case the program causes Decode error by running it
+// Debug this program in case any of the assistants' program gives Decode error
